vlib/v/checker/tests/if_mismatch_option_err.vv
enum Operation {
	get_area
	get_sector
}

fn main() {
	operation_name := 'get_area'
	operation := if o := Operation.from(operation_name) { o } else { ?Operation(none) }
}
